crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@582.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table listp (a int) partition by list(a);
---
CreateStmt@0..48
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..18
    Ident@13..18 "listp"
  Whitespace@18..19 " "
  Ascii40@19..20 "("
  ColumnDef@20..25
    Ident@20..21 "a"
    Whitespace@21..22 " "
    TypeName@22..25
      IntP@22..25 "int"
  Ascii41@25..26 ")"
  Whitespace@26..27 " "
  PartitionSpec@27..46
    Partition@27..36 "partition"
    Whitespace@36..37 " "
    By@37..39 "by"
    Whitespace@39..40 " "
    Ident@40..44 "list"
    Ascii40@44..45 "("
    PartitionElem@45..46
      Ident@45..46 "a"
  Ascii41@46..47 ")"
  Ascii59@47..48 ";"

