crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@583.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table listp_12 partition of listp for values in(1,2) partition by list(a);"
---
CreateStmt@0..81
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..21
    Ident@13..21 "listp_12"
  Whitespace@21..22 " "
  Partition@22..31 "partition"
  Whitespace@31..32 " "
  Of@32..34 "of"
  Whitespace@34..35 " "
  RangeVar@35..40
    Ident@35..40 "listp"
  Whitespace@40..41 " "
  For@41..44 "for"
  Whitespace@44..45 " "
  Values@45..51 "values"
  Whitespace@51..52 " "
  PartitionBoundSpec@52..58
    InP@52..54 "in"
    Ascii40@54..55 "("
    AConst@55..56
      Iconst@55..56 "1"
    Ascii44@56..57 ","
    AConst@57..58
      Iconst@57..58 "2"
  Ascii41@58..59 ")"
  Whitespace@59..60 " "
  PartitionSpec@60..79
    Partition@60..69 "partition"
    Whitespace@69..70 " "
    By@70..72 "by"
    Whitespace@72..73 " "
    Ident@73..77 "list"
    Ascii40@77..78 "("
    PartitionElem@78..79
      Ident@78..79 "a"
  Ascii41@79..80 ")"
  Ascii59@80..81 ";"

