crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@593.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "create table rangep (a int, b int) partition by range (a);"
---
CreateStmt@0..58
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..19
    Ident@13..19 "rangep"
  Whitespace@19..20 " "
  Ascii40@20..21 "("
  ColumnDef@21..26
    Ident@21..22 "a"
    Whitespace@22..23 " "
    TypeName@23..26
      IntP@23..26 "int"
  Ascii44@26..27 ","
  Whitespace@27..28 " "
  ColumnDef@28..33
    Ident@28..29 "b"
    Whitespace@29..30 " "
    TypeName@30..33
      IntP@30..33 "int"
  Ascii41@33..34 ")"
  Whitespace@34..35 " "
  PartitionSpec@35..56
    Partition@35..44 "partition"
    Whitespace@44..45 " "
    By@45..47 "by"
    Whitespace@47..48 " "
    Range@48..53 "range"
    Whitespace@53..54 " "
    Ascii40@54..55 "("
    PartitionElem@55..56
      Ident@55..56 "a"
  Ascii41@56..57 ")"
  Ascii59@57..58 ";"

