crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@594.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rangep_0_to_100 partition of rangep for values from (0) to (100) partition by list (b);
---
CreateStmt@0..100
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..28
    Ident@13..28 "rangep_0_to_100"
  Whitespace@28..29 " "
  Partition@29..38 "partition"
  Whitespace@38..39 " "
  Of@39..41 "of"
  Whitespace@41..42 " "
  RangeVar@42..48
    Ident@42..48 "rangep"
  Whitespace@48..49 " "
  For@49..52 "for"
  Whitespace@52..53 " "
  Values@53..59 "values"
  Whitespace@59..60 " "
  PartitionBoundSpec@60..76
    From@60..64 "from"
    Whitespace@64..65 " "
    Ascii40@65..66 "("
    AConst@66..67
      Iconst@66..67 "0"
    Ascii41@67..68 ")"
    Whitespace@68..69 " "
    To@69..71 "to"
    Whitespace@71..72 " "
    Ascii40@72..73 "("
    AConst@73..76
      Iconst@73..76 "100"
  Ascii41@76..77 ")"
  Whitespace@77..78 " "
  PartitionSpec@78..98
    Partition@78..87 "partition"
    Whitespace@87..88 " "
    By@88..90 "by"
    Whitespace@90..91 " "
    Ident@91..95 "list"
    Whitespace@95..96 " "
    Ascii40@96..97 "("
    PartitionElem@97..98
      Ident@97..98 "b"
  Ascii41@98..99 ")"
  Ascii59@99..100 ";"

