crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@596.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rangep_0_to_100_2 partition of rangep_0_to_100 for values in(2);
---
CreateStmt@0..77
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "rangep_0_to_100_2"
  Whitespace@30..31 " "
  Partition@31..40 "partition"
  Whitespace@40..41 " "
  Of@41..43 "of"
  Whitespace@43..44 " "
  RangeVar@44..59
    Ident@44..59 "rangep_0_to_100"
  Whitespace@59..60 " "
  For@60..63 "for"
  Whitespace@63..64 " "
  Values@64..70 "values"
  Whitespace@70..71 " "
  PartitionBoundSpec@71..75
    InP@71..73 "in"
    Ascii40@73..74 "("
    AConst@74..75
      Iconst@74..75 "2"
  Ascii41@75..76 ")"
  Ascii59@76..77 ";"

