crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@598.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create table rangep_100_to_200 partition of rangep for values from (100) to (200);
---
CreateStmt@0..82
  Create@0..6 "create"
  Whitespace@6..7 " "
  Table@7..12 "table"
  Whitespace@12..13 " "
  RangeVar@13..30
    Ident@13..30 "rangep_100_to_200"
  Whitespace@30..31 " "
  Partition@31..40 "partition"
  Whitespace@40..41 " "
  Of@41..43 "of"
  Whitespace@43..44 " "
  RangeVar@44..50
    Ident@44..50 "rangep"
  Whitespace@50..51 " "
  For@51..54 "for"
  Whitespace@54..55 " "
  Values@55..61 "values"
  Whitespace@61..62 " "
  PartitionBoundSpec@62..80
    From@62..66 "from"
    Whitespace@66..67 " "
    Ascii40@67..68 "("
    AConst@68..71
      Iconst@68..71 "100"
    Ascii41@71..72 ")"
    Whitespace@72..73 " "
    To@73..75 "to"
    Whitespace@75..76 " "
    Ascii40@76..77 "("
    AConst@77..80
      Iconst@77..80 "200"
  Ascii41@80..81 ")"
  Ascii59@81..82 ";"

