crates/pg_syntax/tests/snapshots/postgres_regress/partition_prune@599.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: create index on rangep (a);
---
IndexStmt@0..27
  Create@0..6 "create"
  Whitespace@6..7 " "
  Index@7..12 "index"
  Whitespace@12..13 " "
  On@13..15 "on"
  Whitespace@15..16 " "
  RangeVar@16..22
    Ident@16..22 "rangep"
  Whitespace@22..23 " "
  Ascii40@23..24 "("
  IndexElem@24..25
    Ident@24..25 "a"
  Ascii41@25..26 ")"
  Ascii59@26..27 ";"

